Updated formatting and documentation

--- a/classBook_AnalyticsJumpStart.ipynb
+++ b/classBook_AnalyticsJumpStart.ipynb
@@ -42,7 +42,8 @@
    },
    "outputs": [],
    "source": [
-    "police_Calls = pd.read_csv('../data/police_calls_2018.csv')  ##Imports a data set from csv, uses the pandas library."
+    "police_Calls = pd.read_csv('../data/police_calls_2018.csv')  \n",
+    "##Imports a data set from csv, uses the pandas library."
    ]
   },
   {
@@ -245,7 +246,9 @@
     }
    ],
    "source": [
-    "police_Calls.head() ##Returns the first five rows of the data set by default, pass argument within the parenthesis to "
+    "police_Calls.head() \n",
+    "##Returns the first five rows of the data set by default\n",
+    "##Pass argument within the parenthesis to change amount"
    ]
   },
   {
@@ -396,7 +399,9 @@
     }
    ],
    "source": [
-    "police_Calls.tail(3)  ##Returns the last three rows of data set. Without argument, defaults to five."
+    "police_Calls.tail(3)  \n",
+    "##Returns the last three rows of data set. \n",
+    "##Without argument, defaults to five."
    ]
   },
   {
@@ -417,7 +422,8 @@
     }
    ],
    "source": [
-    "police_Calls.shape  ##Returns number of rows and columns in data set (in that order.)"
+    "police_Calls.shape  \n",
+    "##Returns (# of rows, # of columns) in data set"
    ]
   },
   {
@@ -442,7 +448,8 @@
     }
    ],
    "source": [
-    "police_Calls.columns  ##Lists the columns of the data set."
+    "police_Calls.columns  \n",
+    "##Lists the columns of the data set."
    ]
   },
   {
@@ -452,7 +459,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "police_Calls = police_Calls.drop(columns = ['Event Number', 'Complaint Number', 'Block', 'Street Name', 'geometry'])  ##Removes a subset of the columns, passed as an argument."
+    "police_Calls = police_Calls.drop(columns = [\n",
+    "    'Event Number', 'Complaint Number', 'Block', 'Street Name', 'geometry'\n",
+    "    ])  \n",
+    "##Removes a subset of the columns, passed as an argument."
    ]
   },
   {
@@ -474,7 +484,8 @@
     "    'Zone': 'zone',\n",
     "    'Latitude': 'lat',\n",
     "    'Longitude': 'lng',\n",
-    "    'PO': 'po'}) ##More usable names for columns in dataframe"
+    "    'PO': 'po'}) \n",
+    "##More usable names for columns in dataframe"
    ]
   },
   {
@@ -662,7 +673,8 @@
     }
    ],
    "source": [
-    "police_Calls['disposition_desc'].unique()  ##Lists all unique values in a given column."
+    "police_Calls['disposition_desc'].unique()  \n",
+    "##Lists all unique values in a given column."
    ]
   },
   {
@@ -672,7 +684,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "police_Calls_Trimmed = police_Calls.loc[~police_Calls.disposition_desc.isin(['','DISREGARD / SIGNAL 9','NO RESPONSE'])]  ##Creates a new data set that does not include rows that have the disposition_desc equal to the values passed."
+    "police_Calls_Trimmed = police_Calls.loc[\n",
+    "    ~police_Calls.disposition_desc.isin(\n",
+    "        ['DISREGARD / SIGNAL 9','NO RESPONSE']\n",
+    "                                       )\n",
+    "                                       ]  \n",
+    "##Creates a new data set that does not include rows \n",
+    "##that have the disposition_desc equal to the values passed."
    ]
   },
   {
@@ -682,7 +700,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "police_Calls_Trimmed = police_Calls_Trimmed.loc[~police_Calls.disposition_desc.isna()]  ##Removes rows that do not have a disposition_desc value set. (May be possible to combine with above?)"
+    "police_Calls_Trimmed = police_Calls_Trimmed.loc[\n",
+    "    ~police_Calls.disposition_desc.isna()\n",
+    "                                               ] \n",
+    "##Removes rows that do not have a disposition_desc value set. \n",
+    "##(May be possible to combine with above?)"
    ]
   },
   {
@@ -721,7 +743,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tencode_counts = police_Calls_Trimmed['tencode_desc'].value_counts() ##Creates series \"tencode_counts\" from the column \"tencode_desc\"'s unique value counts. Uses the values themselves as the index of the series. "
+    "tencode_counts = police_Calls_Trimmed['tencode_desc'].value_counts() \n",
+    "##Creates series \"tencode_counts\" from the column \"tencode_desc\"'s unique value counts. \n",
+    "##Uses the values themselves as the index of the series. "
    ]
   },
   {
@@ -731,7 +755,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tencode_counts = tencode_counts.reset_index()  ##Converts string tencode_counts into a dataframe, adding the index as a column with the title \"index\"."
+    "tencode_counts = tencode_counts.reset_index()  \n",
+    "##Converts string tencode_counts into a dataframe, \n",
+    "##adding the index as a column with the title \"index\"."
    ]
   },
   {
@@ -831,7 +857,8 @@
     }
    ],
    "source": [
-    "type(tencode_counts)  ##Returns the type of object \"tencode_counts\""
+    "type(tencode_counts)  \n",
+    "##Returns the type of object \"tencode_counts\""
    ]
   },
   {
@@ -854,15 +881,18 @@
     }
    ],
    "source": [
-    "plt.figure(figsize = (10, 12))                               # Increase the plot size to 10 x 12\n",
-    "sns.set(style=\"whitegrid\")                                   # Change the plot style\n",
-    "sns.barplot(x = 'tencode_desc', \n",
-    "            y = 'index', \n",
-    "            data = tencode_counts, \n",
-    "            palette = 'Set2')                                \n",
-    "plt.xlabel('Number of incidents')                                             \n",
-    "plt.ylabel('Incident description')                                              \n",
-    "plt.title('Most Common Police Responses in Nashville');      # Creates a horizontal plot through Seaborn, using style and palette set."
+    "plt.figure(figsize = (10, 12))     # Increase the plot size to 10 x 12\n",
+    "sns.set(style=\"whitegrid\")         # Change the plot style\n",
+    "sns.barplot(                       # Calls Seaborn to make a bar plot, parameters follow\n",
+    "            x = 'tencode_desc',    # Name of the column in tencode_counts used for x\n",
+    "            y = 'index',           # Name of the column in tencode_counts used for y\n",
+    "            data = tencode_counts, # Name of the dataframe columns are found in\n",
+    "            palette = 'Set2'       # Color palette chosen for this plot\n",
+    "           )\n",
+    "plt.xlabel('Number of incidents')  # Label for x-axis       \n",
+    "plt.ylabel('Incident description') # Label for y-axis                           \n",
+    "plt.title('Most Common Police Responses in Nashville'); # Title of plot     \n",
+    "## Creates a horizontal plot through Seaborn, using style and palette set."
    ]
   },
   {
@@ -980,7 +1010,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zips['index'] = zips['index'].astype('string') ##Converts the 'index' column to string."
+    "zips['index'] = zips['index'].astype('string') \n",
+    "## Converts the 'index' column to string."
    ]
   },
   {
@@ -1006,7 +1037,9 @@
     }
    ],
    "source": [
-    "zips.info()  ##Confirms above step with Dtype column. Note other useful information here, too."
+    "zips.info()  \n",
+    "## Confirms above step with Dtype column. \n",
+    "## Note other useful information here, too."
    ]
   },
   {
@@ -1037,9 +1070,13 @@
     }
    ],
    "source": [
-    "zips.plot(kind = 'barh',\n",
-    "                   x = 'index',\n",
-    "                   y = 'zipcode')  ##Example of default plot - matplotlib does not have particularly pretty defaults."
+    "zips.plot(\n",
+    "    kind = 'barh', # Horizontal bar plot\n",
+    "    x = 'index',\n",
+    "    y = 'zipcode'\n",
+    "         )  \n",
+    "## Example of default plot.\n",
+    "## Matplotlib does not have particularly pretty defaults."
    ]
   },
   {
@@ -1060,12 +1097,14 @@
     }
    ],
    "source": [
-    "plt.figure(figsize = (10, 10))                               # Increase the plot size to 10 x 10\n",
-    "sns.set(style=\"whitegrid\")                                  # Change the plot style\n",
-    "sns.barplot(x = 'zipcode', \n",
-    "            y = 'index', \n",
-    "            data = zips, \n",
-    "            palette = 'Set2')\n",
+    "plt.figure(figsize = (10, 10))     \n",
+    "sns.set(style=\"whitegrid\")         \n",
+    "sns.barplot(\n",
+    "    x = 'zipcode', \n",
+    "    y = 'index', \n",
+    "    data = zips, \n",
+    "    palette = 'Set2'\n",
+    "           )\n",
     "plt.xlabel('Number of incidents')                                              \n",
     "plt.ylabel('ZIP Code')                                              \n",
     "plt.title('Most Common Police Response Locations in Nashville');"
@@ -1245,7 +1284,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "police_Calls_Trimmed['call_time'] = pd.to_datetime(police_Calls_Trimmed['call_time'], format = '%m/%d/%Y %I:%M:%S %p') ##See very useful format documentation at https://docs.python.org/3/library/datetime.html#strftime-and-strptime-behavior"
+    "police_Calls_Trimmed['call_time'] = pd.to_datetime(\n",
+    "    police_Calls_Trimmed['call_time'], format = '%m/%d/%Y %I:%M:%S %p'\n",
+    "                                                  ) \n",
+    "##See very useful format documentation at https://docs.python.org/3/library/datetime.html#strftime-and-strptime-behavior"
    ]
   },
   {
@@ -1255,7 +1297,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "police_Calls_Trimmed['month'] = police_Calls_Trimmed['call_time'].dt.month_name() ##month_name used here to be more easily understood. Consider month for time comparisons."
+    "police_Calls_Trimmed['month'] = police_Calls_Trimmed['call_time'].dt.month_name() \n",
+    "##month_name used here to be more easily understood. \n",
+    "##Consider month for time comparisons."
    ]
   },
   {
@@ -1306,15 +1350,18 @@
     }
    ],
    "source": [
-    "plt.figure(figsize = (10, 5))                               # Increase the plot size to 10 x 10\n",
-    "sns.set(style=\"whitegrid\")                                  # Change the plot style\n",
-    "sns.barplot(x = police_Calls_Trimmed['month'].value_counts(), \n",
-    "            y = police_Calls_Trimmed['month'].value_counts().index, \n",
-    "            data = police_Calls_Trimmed, \n",
-    "            palette = 'Set2')\n",
+    "plt.figure(figsize = (10, 5))                              \n",
+    "sns.set(style=\"whitegrid\")                                 \n",
+    "sns.barplot(\n",
+    "    x = police_Calls_Trimmed['month'].value_counts(),\n",
+    "    y = police_Calls_Trimmed['month'].value_counts().index, \n",
+    "    data = police_Calls_Trimmed, \n",
+    "    palette = 'Set2'\n",
+    "           )\n",
     "plt.xlabel('Number of incidents')                                              \n",
     "plt.ylabel('Month')                                              \n",
-    "plt.title('Police Call Frequency by Month');"
+    "plt.title('Police Call Frequency by Month');\n",
+    "## Note that x and y can be given as the output of functions."
    ]
   },
   {
@@ -1324,7 +1371,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "police_Calls_Trimmed['weekday'] = police_Calls_Trimmed['call_time'].dt.day_name()  ##Uses the day_name function from pandas' datetime."
+    "police_Calls_Trimmed['weekday'] = police_Calls_Trimmed['call_time'].dt.day_name()  \n",
+    "##Uses the day_name function from pandas' datetime."
    ]
   },
   {
@@ -1373,12 +1421,14 @@
     }
    ],
    "source": [
-    "plt.figure(figsize = (10, 5))                               # Increase the plot size to 10 x 10\n",
-    "sns.set(style=\"whitegrid\")                                  # Change the plot style\n",
-    "sns.barplot(x = police_Calls_Trimmed['weekday'].value_counts(), \n",
-    "            y = police_Calls_Trimmed['weekday'].value_counts().index, \n",
-    "            data = police_Calls_Trimmed, \n",
-    "            palette = 'Set2')\n",
+    "plt.figure(figsize = (10, 5))                               \n",
+    "sns.set(style=\"whitegrid\")                                  \n",
+    "sns.barplot(\n",
+    "    x = police_Calls_Trimmed['weekday'].value_counts(), \n",
+    "    y = police_Calls_Trimmed['weekday'].value_counts().index, \n",
+    "    data = police_Calls_Trimmed, \n",
+    "    palette = 'Set2'\n",
+    "           )\n",
     "plt.xlabel('Number of incidents')                                              \n",
     "plt.ylabel('Weekday')                                              \n",
     "plt.title('Police Call Frequency by Weekday');"
@@ -1603,7 +1653,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hub = hub.loc[~hub.closed.isna()]  ##Remove open requests"
+    "hub = hub.loc[~hub.closed.isna()]  \n",
+    "## Remove open requests"
    ]
   },
   {
@@ -1880,7 +1931,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hub['resolution_time'] = hub.closed-hub.opened"
+    "hub['resolution_time'] = hub.closed - hub.opened"
    ]
   },
   {
@@ -2356,7 +2407,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "streets_median = hub.loc[hub.request_type == 'Streets, Roads & Sidewalks'].groupby('zipcode')['resolution_time_hours'].quantile(0.5)  ##Quantile function returns the value (argument) through the ascent-sorted data. Used here for median. Groupby subsets that to make the quantile return different responses for each zip code represented."
+    "streets_median = hub.loc[\n",
+    "    hub.request_type == 'Streets, Roads & Sidewalks'].groupby('zipcode')['resolution_time_hours'].quantile(0.5)\n",
+    "##Quantile function returns the value (argument) through the ascent-sorted data. \n",
+    "##Used here for median. \n",
+    "##Groupby subsets that to make the quantile return different responses for each zip code represented."
    ]
   },
   {
@@ -2388,7 +2443,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "streets_median = streets_median.sort_values(by=['median_resolution_time'], ascending=False)"
+    "streets_median = streets_median.sort_values(\n",
+    "    by=['median_resolution_time'], \n",
+    "    ascending=False\n",
+    "                                           )"
    ]
   },
   {
@@ -2409,14 +2467,18 @@
     }
    ],
    "source": [
-    "plt.figure(figsize = (12, 5))                               # Increase the plot size to 10 x 6\n",
-    "sns.set(style=\"whitegrid\")                                  # Change the plot style\n",
-    "plt.xticks(rotation = 90,                                   \n",
-    "           fontsize = 12)  \n",
-    "sns.barplot(x = 'zipcode', \n",
-    "            y = 'median_resolution_time', \n",
-    "            data = streets_median, \n",
-    "            palette = 'Set2')\n",
+    "plt.figure(figsize = (12, 5))                               \n",
+    "sns.set(style=\"whitegrid\")                                  \n",
+    "plt.xticks(\n",
+    "    rotation = 90,                                   \n",
+    "    fontsize = 12\n",
+    "          )  \n",
+    "sns.barplot(\n",
+    "    x = 'zipcode', \n",
+    "    y = 'median_resolution_time', \n",
+    "    data = streets_median, \n",
+    "    palette = 'Set2'\n",
+    "           )\n",
     "plt.xlabel('Zip Code')                                              \n",
     "plt.ylabel('Median Time')                                              \n",
     "plt.title('Median time to resolve Street, Road, and Sidewalk requests from Nashville Hub by zip code');"
